[Tests] Migrate content/public/android unit tests to Robolectric
Migrate EncodeHtmlDataUriTest, CursorAnchorInfoControllerTest,
InputDialogContainerTest, and DateTimePickerDialogTest from
content_shell_test_apk to host-side Robolectric (content_junit_tests),
moving them to junit/ and renaming them to *UnitTest.java.

These tests exercise Java data URI encoding, InputMethodManager cursor
anchor matrix calculations, and date/time picker dialog state management
with mocked delegate interfaces and zero dependency on native C++
WebContents or Blink rendering. Moving them from content_shell_test_apk
to host-side Robolectric avoids full browser shell APK installation and
executes on the host JVM in milliseconds.

Bypass-Check-License: Renamed existing test files
Bug: 551864627
Change-Id: Ic110e2b712a0b3f1fbfe7139d0c1c9c10d4a102f
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/8422087
Auto-Submit: Fiaz Muhammad <mfiaz@google.com>
Reviewed-by: Jinsuk Kim <jinsukkim@chromium.org>
Commit-Queue: Fiaz Muhammad <mfiaz@google.com>
Cr-Commit-Position: refs/heads/main@{#1701276}